# orthanc-jxl

./: .gitignore  CHANGELOG.md  README.md  meson.build  meson_options.txt
patches/: orthanc-dicomweb-jpegxl-support.patch  orthanc-jpegxl-transfer-syntaxes.patch
scripts/: fetch_orthanc_sdk.py
src/: config.cpp  config.h  dicom_handler.cpp  dicom_handler.h  jxl_codec.cpp  jxl_codec.h  meson.build  pixel_layout.h  plugin.cpp  thread_pool.h  transcode.cpp  transcode.h  transfer_syntax.h  version.h.in
tests/: benchmark.cpp  meson.build  roundtrip.cpp  throughput.cpp
tests/data/: synthetic_mf_gray16.dcm  synthetic_mf_rgb_planar.dcm  test_ct1.dcm  test_ct1_jxl.dcm
